# mbedtls-framework

scripts/: generate_config_tests.py  generate_psa_wrappers.py  make_generated_files.bat  make_generated_files.py
scripts/mbedtls_framework/: psa_information.py
tests/: CMakeLists.txt
